Updated thesis background

--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -15,11 +15,11 @@
     The extragalactic sky appears quite different at different wavelengths. While an optical observer may look at a distant galaxy and see spirals and halos, an infrared observer will see discs and dust. What does the radio astronomer see? 
     \autoref{fig:gleam} shows a false-colour image of the radio sky. The plane of the Milky Way is clearly visible through the centre, but nearly every other object in this image is a galaxy. These galaxies fall into two main categories: those that emit radio due to star formation (called \defn{star-forming galaxies}), and those that emit radio due to \defn{active galactic nuclei} (AGN; called \defn{radio galaxies} in this thesis).
 
-    Non-AGN emission from distant galaxies traces the recent star-formation rate (SFR). Besides low-power thermal emission, stellar radio emission from galaxies mainly comes from massive ($\gtrapprox 8$ M$_\odot$) stars, through two emission mechanisms. The first is through H~II regions, which are ionised by such stars. The ionised electrons emit bremsstrahlung radiation at radio wavelengths. The second emission mechanism is supernovae. Massive stars may end their lives in Type II and Type Ib supernovae, which can result in supernova remnants. These remnants emit synchrotron radiation. Massive stars like these are short-lived ($\lessapprox 3 \times 10^7$ yr), and the corresponding emitting electrons have similarly short lifetimes ($\lessapprox 10^8$ yr). The radio effects of these stars are therefore also short-lived, which is why radio emission traces the recent SFR \citep{condon_radio_1992}. Star formation-associated emission is mainly found in the disc of spiral galaxies, as this is where the star formation rate is highest. In particular, there is no star-forming radio emission extending outside of the galaxy proper. The radio power emitted by these galaxies at 1.4~GHz is on the order of $10^{18}$--$10^{23}$~W~Hz$^{-1}$ \citep{condon_radio_1992}. For a radio survey like the NVSS, with a detection limit of 2.3~mJy, this luminosity range corresponds to a maximum redshift range of $0.0004$--$0.1272$. Upcoming surveys such as EMU, with 5$\sigma$ detection thresholds of 50~$\upmu${}Jy \citep{norris_emu_2011}, will push this range to $0.0030$--$0.6684$.
+    Non-AGN emission from distant galaxies traces the recent star-formation rate (SFR). Besides low-power thermal emission, stellar radio emission from galaxies mainly comes from massive ($\gtrapprox 8$ M$_\odot$) stars, through two emission mechanisms. The first is through H~II regions, which are ionised by such stars. The ionised electrons emit bremsstrahlung radiation at radio wavelengths. The second emission mechanism is supernovae. Massive stars may end their lives in Type II and Type Ib supernovae, which can result in supernova remnants. These remnants emit synchrotron radiation. Massive stars like these are short-lived ($\lessapprox 3 \times 10^7$ yr), and the corresponding emitting electrons have similarly short lifetimes ($\lessapprox 10^8$ yr). The radio effects of these stars are therefore also short-lived, which is why radio emission traces the recent SFR \citep{condon_radio_1992}. Star formation-associated emission is mainly found in the disc of spiral galaxies, as this is where the star formation rate is highest. In particular, there is no star-forming radio emission extending outside of the galaxy proper. The radio power emitted by these galaxies at 1.4~GHz is on the order of $10^{18}$--$10^{23}$~W~Hz$^{-1}$ \citep{condon_radio_1992}. For a radio survey like the NRAO VLA Sky Survey \citep[NVSS;][]{condon98nvss}, with a detection limit of 2.3~mJy, this luminosity range corresponds to a maximum redshift range of $0.0004$--$0.1272$. Upcoming surveys such as the Evolutionary Map of the Universe \citep[EMU;][]{norris11}, with 5$\sigma$ detection thresholds of 50~$\upmu${}Jy \citep{norris_emu_2011}, will push this range to $0.0030$--$0.6684$.
 
     AGN are energetic objects at the centre of galaxies, powered by supermassive black holes. The extended, strongly-magnetised plasma they eject emits synchrotron radiation from accelerating relativistic electrons, which is what we see when we observe a radio galaxy. The radio luminosity of a radio galaxy can range from $10^{22}$--$10^{30}$ W~Hz$^{-1}$\citeneeded at 1.4~GHz, making them some of the most luminous objects in the universe \citeneeded. They are therefore visible throughout the universe, with the most distant AGN detected at a redshift of 7.5 \citep{banados_800-million-solar-mass_2018}. Depending on the orientation and type of AGN, as well as its interaction with its host galaxy, the radio emission may extend far beyond the galaxy itself---up to megaparsec scales---and this emission may have complex structure. Perhaps the most impressive local example is Centaurus A (Cen A), the prominent double-lobed cloud in the upper-right of \autoref{fig:gleam} extending over 8 degrees across the sky. \autoref{sec:agn} discusses AGN in more detail.
 
-    Most radio galaxies are compact and unresolved in any given radio survey due to the distance at which they can be detected and their orientation or type. This means that their structure does not always help distinguish AGN radio emission from star-forming radio emission. How can we tell these apart? Synchrotron emission has a considerably steeper spectral index than bremsstrahlung, but synchrotron emission dominates the bremsstrahlung in star-forming galaxies \citep{condon_radio_1992}. Truly star-forming galaxies can be distinguished from AGN host galaxies by using optical spectroscopy \citep[e.g.][]{mauch_radio_2007, groves_distinguishing_2008}, but radio emission is detectable at much greater distances than good quality optical spectra can be obtained at, making this solution impractical for many galaxies. Separating star-forming galaxies from AGN host galaxies at radio wavelengths remains an open problem in radio astronomy. \todo{are there any good ideas?}
+    Most radio galaxies are compact and unresolved in any given radio survey due to the distance at which they can be detected and their orientation or type. This means that their structure does not always help distinguish AGN radio emission from star-forming radio emission. How can we tell these apart? Synchrotron emission has a considerably steeper spectral index than bremsstrahlung, but synchrotron emission dominates the bremsstrahlung in star-forming galaxies \citep{condon_radio_1992}. Truly star-forming galaxies can be distinguished from AGN host galaxies by using optical spectroscopy \citep[e.g.][]{mauch_radio_2007, groves_distinguishing_2007}, but radio emission is detectable at much greater distances than good quality optical spectra can be obtained at, making this solution impractical for many galaxies. Separating star-forming galaxies from AGN host galaxies at radio wavelengths remains an open problem in radio astronomy. \todo{are there any good ideas?}
 
     Polarised radio surveys can provide extra information. While radio emission due to star formation tends to not have detectable polarisation, AGN may be very strongly polarised. This makes polarisation an excellent indicator of whether a source is an AGN, though very incomplete: many AGN will also not have detectable polarisation, and the polarised intensity is usually less than ten per cent of the total radio intensity, meaning we detect a lot less polarised radio sources than we do radio sources in general.
 
@@ -112,7 +112,7 @@
             \label{eq:rm-synthesis}
             F(\phi) = \int_{-\infty}^\infty P(\lambda^2) e^{-2i\lambda^2\phi}\ \mathrm{d}\lambda^2.
         \end{equation}
-        In reality we do not observe $P(\lambda^2)$ at all wavelengths nor with infinite resolution. In RM synthesis this is accounted for by the introduction of a \defn{weighting function} \citep[or \defn{windowing function}, e.g.][]{heald09faraday} $W(\lambda^2)$. $W(\lambda^2)$ is nonzero if and only if an observation was taken with wavelength $\lambda$. Substituting $P(\lambda^2) \to P(\lambda^2) W(\lambda^2)$ into \autoref{eq:rm-synthesis} results in a sum which can be numerically evaluated:
+        In reality we do not observe $P(\lambda^2)$ at all wavelengths nor with infinite resolution. In RM synthesis this is accounted for by the introduction of a \defn{weighting function} \citep[or \defn{windowing function}, e.g.][]{heald_faraday_2009} $W(\lambda^2)$. $W(\lambda^2)$ is nonzero if and only if an observation was taken with wavelength $\lambda$. Substituting $P(\lambda^2) \to P(\lambda^2) W(\lambda^2)$ into \autoref{eq:rm-synthesis} results in a sum which can be numerically evaluated:
         \begin{equation}
             \label{eq:weighted-rm-synthesis}
             F(\phi) \approx \int_{-\infty}^\infty P(\lambda^2) W(\lambda^2) e^{-2i\lambda^2\phi}\ \mathrm{d}\lambda^2 = \sum_{j = 1}^J P(\lambda^2_j) W(\lambda^2_j) e^{-2i\lambda^2_j\phi}.
@@ -177,7 +177,7 @@
         \begin{figure}
             \centering
             \begin{subfigure}{0.45\textwidth}
-                \includegraphics[width=\textwidth]{images/3C_272.1.jpg}
+                \includegraphics[width=\textwidth]{images/3C_272-1.jpg}
                 \caption{M84/3C 272.1}
                 \label{fig:m84}
             \end{subfigure}
@@ -203,7 +203,7 @@
         \begin{figure}
             \centering
             \begin{subfigure}{0.3\textwidth}
-                \includegraphics[width=\textwidth]{images/3C_83.1B.jpg}
+                \includegraphics[width=\textwidth]{images/3C_83-1B.jpg}
                 \caption{3C 83.1B}
                 \label{fig:3C83-1B}
             \end{subfigure}
@@ -238,15 +238,28 @@
 
         There are many different ways to divide the set of radio AGN into classes. By morphology, radio AGN are often divided by the structure of the jets and lobes, with FRI and FRII the most striking examples. AGN can also be divided into \defn{radiative-mode} and \defn{jet-mode} by how they expel their energy \citep{heckman_coevolution_2014}. Radiative-mode AGN produce radiative energy in amounts higher than 1 percent of their Eddington limit, while jet-mode AGN mainly output energy through their jets. The Eddington limit describes the maximum luminosity that a compact object can emit, and is given in \autoref{eq:eddington} \citep{rybicki_radiative_1979}:
         \begin{equation}
-            L_{\mathrm{Eddington}}(M) = \frac{4\pi G M m_p c}{\sigma_T}.
+            L_{\mathrm{Eddington}}(M) = \frac{4\pi G M m_p c}{\sigma_T}
             \label{eq:eddington}
         \end{equation}
+        where $M$ is the mass of the compact object.
+
         Optical emission observed near the centre of the AGN can be used to divide radio AGN into broad-line and narrow-line galaxies. The former have broad spectral lines while the latter have narrow spectral lines, with broader spectral lines indicative of higher thermal energies. The most common interpretation, under the unified model, is that broad-line AGN are those seen end-on and narrow-line are those seen edge-on with the dusty torus obscuring the broad-line region.\todo{include an alternative explanation} These narrow-line galaxies are usually the only ones for which we see significant extended structure.
 
     \subsection{Polarised structure}
     \label{sec:polarised-structure-of-agn}
 
         The magnetic field of AGN is thought to be critical to their structure \citep{sikora_magnetic_2013}. A strong magnetic field is required to eject and collimate the jets \citep{lovelace_dynamo_1976} and the magnetic environment influences the structure of the jets \citep{osullivan_magnetic_2015}. Polarisation provides a probe for measuring this magnetic field. Radiative- and jet- mode AGN have different fractional polarisations, with jet-mode AGN having a much wider range of fractional polarisations ($p \sim [0, 30]$ per cent) compared to radiative-mode AGN (limited to $p \lessapprox 15$ per cent), with this difference attributable to the magnetic environment \citep{osullivan_magnetic_2015}. Steep-spectrum ($\alpha > 0.5$) and flat-spectrum ($\alpha < 0.5$) AGN have differing fractional polarisations, with steep-spectrum sources having much higher fractional polarisation for frequencies $> 5$~GHz and flat-spectrum sources having higher fractional polarisation for frequencies $< 1$~GHz due to frequency-dependent depolarisation of the steep-spectrum sources \citep{saikia_polarization_1988}. Hotspots of FRII radio galaxies have low polarisation ($<10$ per cent) while the more diffuse sections may have much greater polarisation ($>20$ per cent) \citep{saikia_polarization_1988}. The direction of the magnetic field is correlated with the direction of the total intensity of the source \citep{saikia_polarization_1988}. \todo{}
+
+    \subsection{AGN luminosity}
+    \label{sec:agn-throughout}
+
+        \begin{figure}
+            \centering
+            \includegraphics[width=0.7\textwidth]{images/mauch07rlf.pdf}
+            \caption{\label{fig:mauch-rlf} RLF for star-forming galaxies and AGN, from \citet{mauch07rlf}.}
+        \end{figure}
+
+        The distribution of AGN luminosities throughout the universe can be characterised by the \defn{radio luminosity function} (RLF). This describes the density of AGN within luminosity bins at a given frequency. The RLF at 1.4~GHz from \citet{mauch07rlf} is shown in \autoref{fig:mauch-rlf}. 1.4~GHz is arguably the most common large-scale survey frequency as it detects the 21~cm hydrogen line, but this RLF can be scaled to different frequencies by assuming a constant spectral index ($\alpha = -0.7$ for a typical AGN).
 
     % \subsection{The host galaxies of AGN}
     % \label{sec:host-galaxies}
@@ -261,12 +274,18 @@
     \subsection{The role of AGN}
     \label{sec:role-of-agn}
 
-        How do AGN tie into galaxy evolution and feedback? Why do we need them in our models and theories? Why are they important? \todo{}
+        AGN are an important part of galaxy evolution, though the exact mechanisms of this are not currently known. Understanding galaxy evolution requires understanding the links between AGN and galaxy evolution, and thus requires the study of AGN.
+
+        There are established relationships between AGN parameters and galaxy parameters: the mass of the central black hole is correlated with the stellar mass and velocity dispersion near the core in elliptical galaxies \citep{cattaneo_role_2009} as well as the luminosity of the bulge \citep{kormendy_inward_1995}. Massive galaxies seem to be more likely to contain an AGN rather than an inactive galactic nucleus \citep{hardcastle20feedback}. The large-scale behaviour of AGN (e.g. the Fanaroff-Riley divide) may be caused by within-host galaxy interactions \citep{hardcastle20feedback} and this interaction would be a significant energy contribution to the interstellar medium.
+
+        Perhaps the biggest topic in this field is that of \defn{AGN feedback}, the role of AGN in the enhancement or quenching of star formation within their host galaxies. Star formation requires cold gas; AGN can push gas out of the galaxy \citep{zubovas_clearing_2012} or heat it so that it can no longer form stars. But the rapid expansion of AGN jets can produce shocks in the local environment, compressing gas, triggering collapse of gas clouds, and potentially increasing the star formation rate \citep{zubovas_collapse_2014}.
+
+        For a review of the role of AGN within galaxy evolution, see \citet{kormendy_coevolution_2013}. For a detailed review of the current understanding of AGN, see \citet{hardcastle20feedback}.
 
 \section{Classifying AGN}
 \label{sec:classification-of-agn}
 
-    As discussed in \autoref{sec:unified-model}, radio galaxies fall into many classes. Understanding the mechanisms underlying these class distinctions is critical to understanding AGN. As we have no way to directly see the core of an AGN (it's far too small to resolve at the distances AGN occur and may also be occluded), our only method to investigate AGN is by looking at their large-scale behaviour. Some classes may relate to the fundamental AGN core, some may be environmental, and some may be due to observation effects. Much of our knowledge about AGN (such as the unified model) come from analysing these classes and their differences. To investigate classes of AGN then a large sample of each class is required, and source classification approaches can divide a large dataset from a radio survey into useful subsets. Knowing what class a source is may also help analyse its properties as we can estimate its expected behaviour, perhaps with the aid of models and simulations. Some classes may have interesting structure or properties that can only be observed with additional detailed observations, so identifying which sources require follow-up is a tightly related problem in radio astronomy. An excellent, though now somewhat dated, summary of radio source classification is the review paper by \citet{urry_unified_1995}, which we recommend for further reading.
+    As discussed in \autoref{sec:unified-model}, radio galaxies fall into many classes. Understanding the mechanisms underlying these class distinctions is critical to understanding AGN. As we have no way to directly see the core of an AGN (it's far too small to resolve at the distances AGN occur and may also be occluded), our only method to investigate AGN is by looking at their large-scale behaviour. Some classes may relate to the fundamental AGN core, some may be environmental, and some may be due to observation effects. Much of our knowledge about AGN (such as the unified model) come from analysing these classes and their differences. To investigate classes of AGN a large sample of each class is required, and source classification approaches can divide a large dataset from a radio survey into useful subsets. Knowing what class a source is may also help analyse its properties as we can estimate its expected behaviour, perhaps with the aid of models and simulations. Some classes may have interesting structure or properties that can only be observed with additional detailed observations, so identifying which sources require follow-up is a tightly related problem in radio astronomy. An excellent, though now somewhat dated, summary of radio source classification is the review paper by \citet{urry_unified_1995}, which we recommend for further reading.
 
     Deciding which class a given radio galaxy falls into may be challenging, and doing this automatically even more so. This section discusses approaches to classifying radio galaxies.
 
@@ -288,7 +307,7 @@
 
         Morphological classification of galaxies with machine learning began in optical astronomy, probably due to the large sample sizes of well-resolved galaxies previously available. The earliest such paper is likely the application of neural networks to the task by \citeauthor{storrie-lombardi_morphological_1992} in 1992. From here, the field applied other classification algorithms such as decision trees \citep[e.g.][]{owens_using_1996}. The Sloan Digital Sky Survey (SDSS) brought an explosion of new data in 2003, and new experiments in classification soon followed \citep[e.g.][]{ball_galaxy_2004,ball_robust_2006}. The Galaxy Zoo project leveraged hundreds of thousands of volunteers to produce an astonishingly large set of labelled optical galaxies from SDSS and subsequent papers used this as a training set for machine learning methods \citep{banerji_galaxy_2010,dieleman15cnn,zhu_galaxy_2019}.
 
-        While machine learning has been used in radio astronomy for some time \citep[e.g. the NVSS used neural networks to detect sidelobes;][]{condon_nrao_1998} its first application to radio source classification was most likely to identifying quasar candidates in FIRST \citep{carballo_selection_2004}. \citet{proctor06} applied decision tree ensembles to identify bent double morphologies in FIRST, manually selecting features to characterise radio sources, while \citet{bastien_classifying_2017} used shapelet analysis to obtain features to feed into their decision tree ensembles. 2011--12 marked a revolution in computer vision with the discovery that deep convolutional neural networks \citep[known as early as 1989, see][]{lecun_backpropagation_1989}, boosted dramatically by widely available training data generated by the internet and a huge increase in computational power from GPUs, could achieve greater-than-human performance on image classification tasks. Deep neural networks have since found use for morphological classification of radio sources, such as FRI vs FRII \parencites{aniyan17cnn,ma_machine_2019,lukic_morphological_2019,tang_transfer_2019,samudre_data-efficient_2020,bowles_attention-gating_2020}[see also][]{ma_radio_2018}, compact vs extended sources \citep{lukic18compact,alhassan_first_2018,lukic_morphological_2019}, and observational classes \citep{galvin_radio_2019,ralph19ae}.
+        While machine learning has been used in radio astronomy for some time \citep[e.g. the NVSS used neural networks to detect sidelobes;][]{condon_nrao_1998} its first application to radio source classification was most likely to identifying quasar candidates \citep{carballo_selection_2004} in Faint Images of the Radio Sky at Twenty-Centimeters \citep[FIRST;][]{becker95first}. \citet{proctor06} applied decision tree ensembles to identify bent double morphologies in FIRST, manually selecting features to characterise radio sources, while \citet{bastien_classifying_2017} used shapelet analysis to obtain features to feed into their decision tree ensembles. 2011--12 marked a revolution in computer vision with the discovery that deep convolutional neural networks \citep[known as early as 1989, see][]{lecun_backpropagation_1989}, boosted dramatically by widely available training data generated by the internet and a huge increase in computational power from GPUs, could achieve greater-than-human performance on image classification tasks. Deep neural networks have since found use for morphological classification of radio sources, such as FRI vs FRII \parencites{aniyan17cnn,ma_machine_2019,lukic_morphological_2019,tang_transfer_2019,samudre_data-efficient_2020,bowles_attention-gating_2020}[see also][]{ma_radio_2018}, compact vs extended sources \citep{lukic18compact,alhassan_first_2018,lukic_morphological_2019}, and observational classes \citep{galvin_radio_2019,ralph19ae}.
 
         There are also many works on classification of radio sources besides morphology. Machine learning has been applied to AGN classification tasks including blazar classification \citep{arsioli_machine_2020} and radio loudness \citep{beaklini_agn_2020}. Deep learning is also prevalent on this topic, with deep learning finding applications in Faraday complexity classification \citep{brown_classifying_2018} and notably in transient detection \citep{connor_applying_2018,guo_pulsar_2019,wang_pulsar_2019,agarwal_fetch_2020,lin_pulsar_2020,zhang_applying_2020,balakrishnan_pulsar_2020}.
 
@@ -302,22 +321,31 @@
     \subsection{Why do we need to cross-identify?}
     \label{sec:xid-why}
 
+        Radio spectra generally don't contain a lot of information besides the spectral index: as Jim Condon purportedly said, "There's nothing as useless as a radio source". Most information about extragalactic sources is gleaned from other wavelengths, with optical and infrared showing physically meaningful differences due to emission and absorption at these wavelengths. For this reason radio sources must be cross-identified with their counterparts at other wavelengths to get information. Key features of a host galaxy that may be obtained from optical or infrared observations include its redshift, mass, star formation rate, and composition. From these we may also determine properties of the radio plasma, most notably its physical extent and radio luminosity, both of which require knowing the redshift.
+
     \subsection{Methods for cross-identification}
     \label{sec:xid-how}
 
-        Here are some methods for cross-identification:
-        \begin{itemize}
-            \item positional matching
-            \item our cool method (which is the first ML approach)
-            \item fan 15 and 20
-            \item weston 20 (thesis)
-            \item galvin 20
-        \end{itemize}
+        Most small radio surveys are cross-identified by astronomers, manually comparing the radio image to the optical or infrared image \citep[e.g.][]{norris06,middelberg08}. The largest such catalogue is the ROGUE~I catalogue with over 32~000 cross-identifications \citep{zywucka_catalogue_2020}. The Radio Galaxy Zoo project \citep{banfield15} extended manual cross-identification to larger scales by crowdsourcing, asking volunteers online to cross-identify FIRST and ATLAS resulting in 75~000 cross-identified extended sources. This is the largest manually cross-identified source catalogue ever, though by citizen scientists rather than professional astronomers --- though this distinction does not seem to matter as the accuracy of cross-identifications in Radio Galaxy Zoo is still quite high, and there is an upper limit to how well even astronomers can cross-identify large surveys \citep[Wong et al., in prep;][]{banfield15}.
+
+        \subsubsection{Positional matching}
+        \label{sec:xid-posmatch}
+
+            The simplest automated method for cross-identification is simply to look for the closest optical or infrared galaxy to some radio emission, a strategy called \defn{positional matching} or \defn{nearest neighbours}. The distance to the nearest potential host galaxy is usually limited to some small value, so that distant spurious relations are excluded. This distance is usually about $5''$ for infrared and $1''$ for optical but may be much further. Some authors modify this approach to selecting the nearest \emph{bright} galaxy or some other constraints \citep[e.g.][]{kimball08}. This approach generally works quite well for compact objects but extended radio structures may overlap with unrelated galaxies on the sky, leading to spurious cross-identifications.
+
+            The rate of spurious identification with this approach can be estimated by a simple model, assuming that the true host galaxy is not visible (either too faint or not nearby). Assume that a small circular region of the sky with radius $a$ contains $K$ potential host galaxies. The probability that a randomly selected potential host galaxy is within $r\ \mathrm{rad}$ of a given point is $r^2 / a^2$, with $r < a$. The probability of no potential host galaxy falling within $r\ \mathrm{rad}$ of a given point is therefore $(1 - r^2 / a^2)^K$ and the probability of coincidental cross-identification is $1 - (1 - r^2 / a^2)^K$. The All\emph{WISE} survey contains 747~634~026 infrared sources, over $4\pi\ \mathrm{sr}$, so it has an average source density of approximately $6 \times 10^7\ \mathrm{sr}^{-1}$. With $r = 5''$, and $a = 1^\circ$ (corresponding to an area of $9.57 \times 10^{-4}\ \mathrm{sr}$ and thus 57~420 sources), we have a coincidental cross-identification rate of 10.5 per cent when the host galaxy is not visible.\todo{there's a few different ways to derive this... check this}
+
+            % Assume that a circular region of the sky with solid angle $a\ \mathrm{sr}$ contains $K$ potential host galaxies distributed uniformly. The probability that a randomly selected potential host galaxy is within $r\ \mathrm{rad}$ of any given point, such as the location of a radio object, is $2\pi(1 - \cos r)/a$, which is the ratio of the area of the respective spherical caps. Therefore the probability of this potential host galaxy \emph{not} being within radius $r$ is $1 - 2\pi(1 - \cos r)/a$, and the probability of \emph{any} of the $K$ potential host galaxies not being within $r$ is $(1 - 2\pi(1 - \cos r)/a)^K$. Assuming a constant density of galaxies $\rho\ \mathrm{sr}^{-1}$, $K = \rho a$, so $(1 - 2\pi(1 - \cos r)/a)^{\rho a}$. The maximum value of $a$ is $4\pi$, and in this limit we have $\cos^2(r/2)^{4\pi\rho}$. If $r$ is very small, then we can approximate $\cos^2 (r / 2) \approx 1 - r^2 / 8$ and we have $(1 - r^2 / 8)^{4 \pi \rho}$.
+
+        \subsubsection{Other automated methods}
+        \label{sec:xid-other}
+
+            With very few non-trivial cross-identification methods in existence, the field is still very much in its infancy. Other automated methods for cross-identification can be grouped into machine learning and non-machine learning approaches. The two non-machine learning approaches are a Bayesian geometric model fitting approach \citep{fan15,fan_optimal_2020} and a likelihood ratio approach \citep{weston_astronomical_2020,weston18lrpy}. In \autoref{cha:cross-id} we introduce the very first machine learning approach for radio-infrared cross-identification \citep{alger18radio}. \citet{galvin_cataloguing_2020} later developed a hybrid machine learning and manual labelling approach to cross-identification.
 
 \section{Aggregating Radio Components}
 \label{sec:aggregation}
     
-    Unlike galaxies observed at other wavelengths, the emission from radio galaxies can be disconnected when observed: a single radio galaxy may appear in observations as multiple discrete components. This is partly due to inhomogeneous emission over the radio galaxy structure --- e.g. FRII hotspots can be much brighter than the rest of the galaxy, so they might be visible while the rest of the galaxy is too faint to see --- and partly due to the technique through which many radio observations are made, \defn{interferometry}, which may screen out diffuse emission.
+    Unlike emission from galaxies observed at other wavelengths, the extended emission from radio galaxies can be disconnected when observed: a single radio galaxy may appear in observations as multiple discrete components. This is partly due to inhomogeneous emission over the radio galaxy structure --- e.g. FRII hotspots can be much brighter than the rest of the galaxy, so they might be visible while the rest of the galaxy is too faint to see --- and partly due to the technique through which many radio observations are made, \defn{interferometry}, which may screen out diffuse emission.
 
     This potential of a radio galaxy to be split into multiple discrete blobs of emission also leads to a linguistic ambiguity not present at other wavelengths. A \defn{radio source} may be either a single physical object that emits radio, or a single blob of disconnected radio emission. The same is true for \defn{radio object}. There is no agreed-upon terminology. We will therefore adopt the following terminology from this point on, adapted from my paper \citep{alger18radio} based on the Radio Galaxy Zoo terminology: a \defn{radio source} or \defn{radio galaxy} refers to all radio emission observed that comes from a single physical object, and a \defn{radio component} refers to a single, contiguous region of radio emission above the noise level of an observation. We will avoid using \defn{radio object}. Note that in the literature a \defn{radio component} may be either a Gaussian fit to an observation or it may be a region of connected emission; in works where the former is the case (particularly in source-finding literature) the latter is often called a \defn{radio island}.
 
